tests/ui/traits/issue-105231.stderr
error[E0072]: recursive types `A` and `B` have infinite size
  --> $DIR/issue-105231.rs:2:1
   |
LL | struct A<T>(B<T>);
   | ^^^^^^^^^^^ ---- recursive without indirection
LL |
LL | struct B<T>(A<A<T>>);
   | ^^^^^^^^^^^ ------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL ~ struct A<T>(Box<B<T>>);
LL |
LL ~ struct B<T>(Box<A<A<T>>>);
   |

error[E0119]: conflicting implementations of trait `Foo` for type `B<u8>`
  --> $DIR/issue-105231.rs:7:1
   |
LL | impl<T> Foo for T where T: Send {}
   | ----------------- first implementation here
LL | impl Foo for B<u8> {}
   | ^^^^^^^^^^^^^^^^^^ conflicting implementation for `B<u8>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0072, E0119.
For more information about an error, try `rustc --explain E0072`.
